--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind Css Practice Project</title>
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="./dist/output.css" rel="stylesheet" />
   </head>
   <body class="bg-slate-800">
     <nav class="w-[1300px] h-24 flex mx-auto justify-between items-center w">
       <img
         class="w-18 h-20 rounded-full border border-white mt-2"
-        src="/images/profile_img.jpg"
+        src="./images/profile_img.jpg"
       />
       <div>
         <ul class="flex space-x-5">
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="flex-1">
-          <img src="/images/hero_img.png" />
+          <img src="./images/hero_img.png" />
         </div>
       </div>
     </div>
@@ -94,7 +94,7 @@
       <h2 class="title">What I Do</h2>
       <div class="cards flex justify-between space-x-12 mt-5 items-center py-8">
         <div class="card hover:translate-x-3 cursor-pointer">
-          <img src="/images/icons/service-1.png" />
+          <img src="./images/icons/service-1.png" />
           <h4 class="text-white text-2xl font-semibold my-3">
             App Development
           </h4>
@@ -105,7 +105,7 @@
           </p>
         </div>
         <div class="card hover:translate-x-3 cursor-pointer">
-          <img src="/images/icons/service-1.png" />
+          <img src="./images/icons/service-1.png" />
           <h4 class="text-white text-2xl font-semibold my-3">
             Web Development
           </h4>
@@ -116,7 +116,7 @@
           </p>
         </div>
         <div class="card hover:translate-y-3 cursor-pointer">
-          <img src="/images/icons/service-1.png" />
+          <img src="./images/icons/service-1.png" />
           <h4 class="text-white text-2xl font-semibold my-3">
             Full Stack Development
           </h4>
@@ -134,7 +134,7 @@
       <h2 class="title">My PORTFOLIO</h2>
       <div class="grid grid-cols-3 gap-6 mt-8">
         <div class="port-1 bg-slate-900 h-[500px] rounded-2xl p-7 hover:translate-y-3 cursor-pointer">
-          <img class="rounded-lg" src="/images/portfolio/port_nft.jpg" />
+          <img class="rounded-lg" src="./images/portfolio/port_nft.jpg" />
           <h4 class="text-white text-2xl my-2 font-semibold">
             NFT Dashboard Application Development
           </h4>
@@ -143,7 +143,7 @@
           </p>
         </div>
         <div class="port-2 bg-slate-900 h-[500px] rounded-2xl p-7 hover:translate-y-3 cursor-pointer">
-          <img class="rounded-lg" src="/images/portfolio/port_food.png" />
+          <img class="rounded-lg" src="./images/portfolio/port_food.png" />
           <h4 class="text-white text-2xl my-2 font-semibold">
             Online Food Delivery Mobile App Development
           </h4>
@@ -152,7 +152,7 @@
           </p>
         </div>
         <div class="port-3 bg-slate-900 h-[500px] rounded-2xl p-7 hover:translate-y-3 cursor-pointer">
-          <img class="rounded-lg" src="/images/portfolio/port_travel.jpg" />
+          <img class="rounded-lg" src="./images/portfolio/port_travel.jpg" />
           <h4 class="text-white text-2xl my-2 font-semibold">
             Travel App Design and Application Development
           </h4>
@@ -161,7 +161,7 @@
           </p>
         </div>
         <div class="port-4 bg-slate-900 h-[500px] rounded-2xl p-7 hover:translate-y-3 cursor-pointer">
-          <img class="rounded-lg" src="/images/portfolio/port_workout.jpg" />
+          <img class="rounded-lg" src="./images/portfolio/port_workout.jpg" />
           <h4 class="text-white text-2xl my-2 font-semibold">
             Work Out Dashboard Design and Development
           </h4>
@@ -170,7 +170,7 @@
           </p>
         </div>
         <div class="port-5 bg-slate-900 h-[500px] rounded-2xl p-7 hover:translate-y-3 cursor-pointer">
-          <img class="rounded-lg" src="/images/portfolio/port_landing.jpg" />
+          <img class="rounded-lg" src="./images/portfolio/port_landing.jpg" />
           <h4 class="text-white text-2xl my-2 font-semibold">
             Mobile Application Landing Page Design
           </h4>
@@ -179,7 +179,7 @@
           </p>
         </div>
         <div class="port-6 bg-slate-900 h-[500px] rounded-2xl p-7 hover:translate-y-3 cursor-pointer">
-          <img class="rounded-lg" src="/images/portfolio/port_rest.jpg" />
+          <img class="rounded-lg" src="./images/portfolio/port_rest.jpg" />
           <h4 class="text-white text-2xl my-2 font-semibold">
             Resturent Mobile Application Development
           </h4>
@@ -251,15 +251,15 @@
     </div>
     <!-- section five -->
     <div class="w-[1300px] mx-auto flex py-6 space-x-5 justify-between">
-      <img class="w-60" src="/images/logos/part1.png" />
-      <img class="w-60" src="/images/logos/part2.png" />
-      <img class="w-60" src="/images/logos/part3.png" />
-      <img class="w-60" src="/images/logos/part4.png" />
+      <img class="w-60" src="./images/logos/part1.png" />
+      <img class="w-60" src="./images/logos/part2.png" />
+      <img class="w-60" src="./images/logos/part3.png" />
+      <img class="w-60" src="./images/logos/part4.png" />
     </div>
     <!-- section six  -->
     <div id="footer" class="bg-slate-900 h-[450px] flex items-center">
       <div class="w-[1300px] mx-auto flex justify-between">
-        <img class="w-60 h-60 rounded-full" src="/images/profile_img.jpg" />
+        <img class="w-60 h-60 rounded-full" src="./images/profile_img.jpg" />
        
       <div>
       <h4 class="text-white text-2xl">QUICK LINKS</h4>
